--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -11,6 +11,7 @@
     "totalSettings": "Total de Ajustes",
     "unsavedChanges": "Cambios no guardados",
     "configured":"Configurado",
+    "notConfigured":"No Configurado",
     "allSaved":"Todo guardado",
     "refresh": "Recargar",
     "save": "Guardar",
@@ -189,6 +190,104 @@
       }
     }
   },
+
+  "platformSettings": {
+    "status":"Estado",
+    "save":"Guardar Cambios",
+    "configured":"Configurado",
+    "success": "Configuración guardada exitosamente",
+    "error": "Error al guardar la configuración",
+    "title": "Configuraciones Globales de Plataforma",
+    "subtitle": "Define las configuraciones predeterminadas para cada red social.",
+    "clickToConfigure": "Haz clic para configurar",
+    "configure": "Configurar red",
+    "preview": {
+      "view": "Ver vista previa"
+    },
+    "messages": {
+      "success": "Configuración guardada exitosamente ",
+      "error": "Error al guardar la configuración "
+    },
+    "button": {
+      "save": "Guardar Cambios"
+    },
+    "youtube": {
+      "title": "YouTube",
+      "type": "Tipo de Video",
+      "video": "Video Normal",
+      "videoStandard": "Video estándar",
+      "contentType": "Tipo de Contenido",
+      "short": "Shorts",
+      "shortVertical": "Video Vertical Shorts",
+      "privacy": "Privacidad",
+      "public": "Público",
+      "private": "Privado",
+      "unlisted": "Oculto",
+      "madeForKids": "SÍ, es contenido para niños"
+    },
+    "facebook": {
+      "title": "Facebook",
+      "type": "Tipo de Publicación",
+      "feed": "Publicación del Muro",
+      "feedDescription": "Publicación del Muro",
+      "reel": "Reel",
+      "reelDescription": "Video corto vertical"
+    },
+    "instagram": {
+      "title": "Instagram",
+      "type": "Tipo de Publicación",
+      "feed": "Publicación del Feed",
+      "feedDescription": "Publicación del Feed",
+      "reel": "Reel",
+      "reelDescription": "Video corto vertical",
+      "story": "Historia",
+      "storyDescription": "Historia"
+    },
+    "tiktok": {
+      "title": "TikTok",
+      "privacy": "Privacidad",
+      "public": "Público",
+      "publicDescription": "Todos pueden ver",
+      "friends": "Solo Amigos",
+      "friendsDescription": "Solo tus amigos pueden ver",
+      "private": "Privado",
+      "privateDescription": "Solo tú",
+      "interactions": "Interacciones",
+      "interactionsDescription": "Permitir interacciones",
+      "comments": "Comentarios",
+      "commentsDescription": "Permitir comentarios",
+      "duets": "Dúo",
+      "duetsDescription": "Permitir dúos",
+      "stitchs": "Pegar",
+      "stitchsDescription": "Permitir pegar"
+    },
+    "twitter": {
+      "title": "Twitter (X)",
+      "type": "Tipo de Post",
+      "tweet": "Tweet Estándar",
+      "thread": "Hilo (Dividir texto)",
+      "poll": "Encuesta",
+      "pollOptions": "Opciones de Encuesta",
+      "optionPlaceholder": "Opción {{index}}",
+      "optional": "(Opcional)",
+      "pollDuration": "Duración (Minutos)",
+      "30m": "30 Minutos",
+      "1h": "1 Hora",
+      "24h": "24 Horas",
+      "3d": "3 Días",
+      "7d": "7 Días",
+      "subtitle": "Ajustar opciones específicas de la plataforma"
+    },
+    "labels": {
+      "type": "Tipo de Publicación",
+      "privacy": "Privacidad",
+      "made_for_kids": "Contenido para Niños",
+      "disable_comment": "Desactivar Comentarios",
+      "disable_duet": "Desactivar Dúos",
+      "disable_stitch": "Desactivar Pegar",
+      "poll_duration": "Duración de Encuesta"
+    }
+  },
    "publications": {
     "title": "Publicaciones",
     "subtitle": "Gestionar tus publicaciones",
@@ -241,96 +340,7 @@
           "cancel":"Cancelar"
         }
       },
-      "platformSettings": {
-        "status":"Estado",
-        "save":"Guardar Cambios",
-        "configured":"Configurado",
-        "success": "Configuración guardada exitosamente",
-        "error": "Error al guardar la configuración",
-        "title": "Configuraciones Globales de Plataforma",
-        "subtitle": "Define las configuraciones predeterminadas para cada red social.",
-        "clickToConfigure": "Haz clic para configurar",
-        "configure": "Configurar red",
-        "preview": {
-          "view": "Ver vista previa"
-        },
-        "youtube": {
-          "title": "YouTube",
-          "type": "Tipo de Video",
-          "video": "Video Normal",
-          "videoStandard": "Video estándar",
-          "contentType": "Tipo de Contenido",
-          "short": "Shorts",
-          "shortVertical": "Video Vertical Shorts",
-          "privacy": "Privacidad",
-          "public": "Público",
-          "private": "Privado",
-          "unlisted": "Oculto",
-          "madeForKids": "SÍ, es contenido para niños"
-        },
-        "facebook": {
-          "title": "Facebook",
-          "type": "Tipo de Publicación",
-          "feed": "Publicación del Muro",
-          "feedDescription": "Publicación del Muro",
-          "reel": "Reel",
-          "reelDescription": "Video corto vertical"
-        },
-        "instagram": {
-          "title": "Instagram",
-          "type": "Tipo de Publicación",
-          "feed": "Publicación del Feed",
-          "feedDescription": "Publicación del Feed",
-          "reel": "Reel",
-          "reelDescription": "Video corto vertical",
-          "story": "Historia",
-          "storyDescription": "Historia"
-        },
-        "tiktok": {
-          "title": "TikTok",
-          "privacy": "Privacidad",
-          "public": "Público",
-          "publicDescription": "Todos pueden ver",
-          "friends": "Solo Amigos",
-          "friendsDescription": "Solo tus amigos pueden ver",
-          "private": "Privado",
-          "privateDescription": "Solo tú",
-          "interactions": "Interacciones",
-          "interactionsDescription": "Permitir interacciones",
-          "comments": "Comentarios",
-          "commentsDescription": "Permitir comentarios",
-          "duets": "Dúo",
-          "duetsDescription": "Permitir dúos",
-          "stitchs": "Pegar",
-          "stitchsDescription": "Permitir pegar"
-        },
-        "twitter": {
-          "title": "Twitter (X)",
-          "type": "Tipo de Post",
-          "tweet": "Tweet Estándar",
-          "thread": "Hilo (Dividir texto)",
-          "poll": "Encuesta",
-          "pollOptions": "Opciones de Encuesta",
-          "optionPlaceholder": "Opción {{index}}",
-          "optional": "(Opcional)",
-          "pollDuration": "Duración (Minutos)",
-          "30m": "30 Minutos",
-          "1h": "1 Hora",
-          "24h": "24 Horas",
-          "3d": "3 Días",
-          "7d": "7 Días",
-          "subtitle": "Ajustar opciones específicas de la plataforma"
-        },
-        "labels": {
-          "type": "Tipo de Publicación",
-          "privacy": "Privacidad",
-          "made_for_kids": "Contenido para Niños",
-          "disable_comment": "Desactivar Comentarios",
-          "disable_duet": "Desactivar Dúos",
-          "disable_stitch": "Desactivar Pegar",
-          "poll_duration": "Duración de Encuesta"
-        }
-      },
+
       "edit": {
         "title": "Editar Publicación",
         "titleField": "Título",
@@ -465,16 +475,6 @@
       "failed":"Fallido",
       "instant":"Instantáneo",
       "deleted":"Eliminado"
-    },
-    "platformSettings":{
-      "title":"Configuración de Plataforma",
-      "subtitle":"Configuración de Plataforma",
-      "account":"Cuenta",
-      "accountDescription":"Cuenta",
-      "schedule":"Programación",
-      "scheduleDescription":"Programación",
-      "settings":"Configuración",
-      "settingsDescription":"Configuración"
     },
     "button": {
       "add": "Agregar publicación",
@@ -767,6 +767,7 @@
       "notConnected": "No Conectado",
       "manageLink": "Administrar conexiones en el Gestor de Contenido"
     },
+
     "password": {
       "title": "Actualizar Contraseña",
       "description": "Mantén tu cuenta segura con una contraseña fuerte",
@@ -1111,7 +1112,38 @@
         "disconnect": "Desconectar",
         "processing": "Procesando..."
       },
+      "validation": {
+        "facebook": {
+          "typeRequired": "Debes seleccionar un tipo de publicación para Facebook",
+          "typeInvalid": "Tipo de publicación inválido para Facebook"
+        },
+        "instagram": {
+          "typeRequired": "Debes seleccionar un tipo de publicación para Instagram",
+          "typeInvalid": "Tipo de publicación inválido para Instagram"
+        },
+        "twitter": {
+          "typeRequired": "Debes seleccionar un tipo de publicación para Twitter",
+          "pollOptionsMin": "Las encuestas requieren al menos 2 opciones",
+          "pollOptionEmpty": "Las opciones de la encuesta no pueden estar vacías"
+        },
+        "youtube": {
+          "typeRequired": "Debes seleccionar un tipo de video para YouTube",
+          "typeInvalid": "Tipo de video inválido para YouTube"
+        },
+        "tiktok": {
+          "typeRequired": "Formato requerido para TikTok",
+          "typeInvalid": "Formato inválido"
+        }
+      },
       "messages": {
+        "settingsUpdated": {
+            "facebook": "Configuración de Facebook actualizada correctamente",
+            "instagram": "Configuración de Instagram actualizada correctamente",
+            "twitter": "Configuración de Twitter actualizada correctamente",
+            "tiktok": "Configuración de TikTok actualizada correctamente",
+            "youtube": "Configuración de YouTube actualizada correctamente",
+            "default": "Configuración actualizada correctamente"
+        },
         "connectSuccess": "Cuenta conectada exitosamente",
         "disconnectSuccess": "Cuenta desconectada exitosamente",
         "authError": "Error de autenticación",
