--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -268,6 +268,7 @@
         "accountMissingTitle": "Account Disconnected",
         "accountMissingText": "This publication was posted on an account ({{account}}) that is no longer connected. Editing it will create a new version for your current account(s). Proceed?",
         "selectSocialAccounts": "Select Accounts",
+        "lockedBySession": "Locked by Session",
         "dragDrop": {
           "title": "Drag and drop to sort",
           "subtitle": "Upload your multimedia files here"
