add: add connected in en.json and es.json fix translation

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -1174,6 +1174,7 @@
       "title": "Connect Your Social Networks",
       "description": "Connect your social media accounts to allow automatic content publishing. Your information will be kept secure and will only be used for the functions you authorize.",
       "whyConnect": "Why connect your social networks?",
+      "connected": "Connected",
       "of": "of",
       "accounts": "accounts",
       "seeAccounts": "See networks",
