--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -1192,6 +1192,10 @@
       "accounts": "cuentas",
       "seeAccounts": "Ver redes",
       "hide": "Ocultar",
+      "connected": "Conectado",
+      "notConnected": "No Conectada",
+      "connectToShare": "Conecta para comenzar a compartir",
+      "connectedBy": "Conectada por",
       "benefits": {
         "autoPublish": "Publicar contenido automáticamente",
         "manageAll": "Gestionar todas las cuentas en un solo lugar",
