fix: fix translations and sections aprroved publish

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -55,6 +55,7 @@
     "adjustOptions": "Adjust specific options",
     "viewOnPlatform": "View on platform",
     "viewDirectly": "View full screen",
+    "editInPanel": "Edit in panel",
     "creator": "Creator",
     "remove": "Remove",
     "errors": {
