config translations and delete platformsPreview

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -1056,7 +1056,7 @@
         "3": "Wait a few minutes and try again"
       }
     },
-    "returnToLogin": "Return to Login"
+    "returnToLogin": "Return"
   },
   "verification": {
     "banner": {
